# HAMOOPI

./: .gitignore  CMakeLists.txt  COMPILAR.bat  Dockerfile  HAMOOPI.cpp  Makefile  README.md  SETUP.ini  compilar.sh
backgrounds/Background1/: 000_00.pcx  config.ini
backgrounds/Background2/: 000_00.pcx  config.ini
chars/CharTemplate/: 000_00.pcx  000_01.pcx  000_02.pcx  100_00.pcx  100_01.pcx  100_03.pcx  100_04.pcx  101_00.pcx  101_01.pcx  103_00.pcx  103_02.pcx  103_03.pcx  104_02.pcx  105_00.pcx  105_01.pcx  106_00.pcx  106_01.pcx  106_02.pcx  106_03.pcx  106_04.pcx  151_01.pcx  151_02.pcx  152_01.pcx  152_02.pcx  152_03.pcx  152_06.pcx  153_00.pcx  153_02.pcx  153_03.pcx  153_04.pcx  154_01.pcx  154_02.pcx  154_04.pcx  155_01.pcx  155_02.pcx  155_04.pcx  156_00.pcx  156_01.pcx  156_02.pcx  156_03.pcx  (+170 more)
docs/: HAMOOPI_TABELA DE MOVIMENTOS.xls  INFO.txt
sounds/: bgm_continue.mid  bgm_select_screen.mid  bgm_versus_mode.mid
system/: 000_00.pcx  000_01.pcx  991_00.pcx  991_01.pcx  991_02.pcx  991_03.pcx  991_04.pcx  991_05.pcx  992_00.pcx  992_01.pcx  992_02.pcx  992_03.pcx  992_04.pcx  992_05.pcx  993_00.pcx  993_01.pcx  993_02.pcx  993_03.pcx  993_04.pcx  993_05.pcx  994_00.pcx  994_01.pcx  994_02.pcx  994_03.pcx  994_04.pcx  994_05.pcx  AnimIntro00.pcx  AnimIntro01.pcx  AnimIntro02.pcx  AnimIntro03.pcx  AnimIntro04.pcx  AnimIntro05.pcx  AnimIntro06.pcx  AnimIntro07.pcx  AnimIntro08.pcx  AnimIntro09.pcx  AnimIntro10.pcx  AnimIntro11.pcx  AnimIntro12.pcx  AnimIntro13.pcx  (+154 more)
tools/Font Test and Generator/: font.pcx  reference.pcx
tools/Palette Generator/: pal0.pcx  (+10 more)
(+22 files in other folders)
